# Notein

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
